# simple-tool

./: CMakeLists.txt  Makefile
include/: cursor.h  logList.h  menu.h
source/: cursor.c  logList.c  main.c  menu.c
